# formsg-python-sdk

./: .editorconfig  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish-pypi.yml
formsg/: __init__.py  django.py  flask.py  utils.py  webhook.py
tests/: __init__.py  utils.py
