[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = 39
src_paths = "hippocrates/"
line_length = 65536
force_single_line = true
force_sort_within_sections = true
honor_noqa = true
multi_line_output = 7
verbose = false

sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "LOCALFOLDER",
]

[tool.mypy]
python_version = 3.9

mypy_path = ["formsg", "tests"]

show_error_codes = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_any_generics = true

no_implicit_optional = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
show_traceback = true
raise_exceptions = true


[tool.poetry]
name = "formsg"
version = "0.1.8"
description = "A Python SDK for handling FormSG webhooks."
authors = ["5 Health Inc <engineers@botmd.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

pynacl = ">=1.4.0"
requests = "*"

[tool.poetry.group.dev.dependencies]
mypy = "*"
flake8 = "*"
isort = "*"
types-requests = "*"
